# CayleyPy-Pancake-sorting-Research

./: .gitignore  README.md  main.py  myst.yml  pyproject.toml
.github/workflows/: format.yml
experiments/: calypy-pancake-base.ipynb  cayley-pancake-base-variant.ipynb
research-log/: experiment_1.md
testing/: ablation_template.ipynb  pancake-problem-baseline-submission.ipynb
